# trader

./: .env  .env.example  .gitignore  DESCRIPTION.md  README.md  main.py  pyproject.toml
.trader/: state.sqlite3
.trader/watchlists/: watchlist-20260315.json
ibga/: pyproject.toml  setup.py
ibga/ibapi/: client.py  client_utils.py  comm.py  common.py  connection.py  contract.py  decoder.py  decoder_utils.py  execution.py  ineligibility_reason.py  order.py  order_cancel.py  order_state.py  orderdecoder.py  scanner.py  utils.py  wrapper.py
ibga/ibapi/protobuf/: CancelOrderRequest_pb2.py  ComboLeg_pb2.py  Contract_pb2.py  DeltaNeutralContract_pb2.py  ErrorMessage_pb2.py  ExecutionDetailsEnd_pb2.py  ExecutionDetails_pb2.py  ExecutionFilter_pb2.py  ExecutionRequest_pb2.py  Execution_pb2.py  GlobalCancelRequest_pb2.py  OpenOrder_pb2.py  OpenOrdersEnd_pb2.py  OrderAllocation_pb2.py  OrderCancel_pb2.py  OrderCondition_pb2.py  OrderState_pb2.py  OrderStatus_pb2.py  Order_pb2.py  PlaceOrderRequest_pb2.py  SoftDollarTier_pb2.py
proto/: trader.proto
proto/grpc/reflection/v1alpha/: reflection.proto
src/trader/: __init__.py  cli.py  config.py  execution.py  indicators.py  logging_utils.py  market.py  models.py  proto_codegen.py  risk.py  rpc.py  runtime.py  sentiment.py  state.py  strategy.py  trade_journal.py  tui.py
src/trader/broker/: ibkr.py
src/trader/grpc_gen/: __init__.py  trader_pb2.py  trader_pb2_grpc.py
src/trader/grpc_gen/grpc/: __init__.py
src/trader/grpc_gen/grpc/reflection/: __init__.py
src/trader/grpc_gen/grpc/reflection/v1alpha/: __init__.py  reflection_pb2.py  reflection_pb2_grpc.py
tests/: test_cli.py  test_config.py  test_execution.py  test_grpc.py  test_risk.py  test_runtime.py  test_state.py  test_strategy.py
