[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "trader"
version = "0.1.0"
description = "Interactive Brokers momentum trading bot with terminal UI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exchange-calendars",
    "ibapi",
    "pydantic",
    "pydantic-settings",
    "textual",
    "textual-serve",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
trader = "trader.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.uv]
package = true

[tool.uv.sources]
ibapi = { path = "ibga", editable = true }
