[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibapi"
version = "10.30.1"
description = "Vendored Interactive Brokers Python API client."
requires-python = ">=3.12,<3.13"
dependencies = [
    "protobuf==5.29.3",
]

[tool.setuptools]
packages = ["ibapi", "ibapi.protobuf"]
